--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context=".DetailsFragment">
+    tools:context=".details.DetailsFragment">
 
     <com.github.mikephil.charting.charts.CandleStickChart
         android:id="@+id/chart"
